--- a/helm/nim-llm/Chart.yaml
+++ b/helm/nim-llm/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: nim-llm
-description: A Helm chart for NVIDIA NIM for LLMs
+description: A Helm chart for NVIDIA NIM for LLMs adjusted
 type: application
 kubeVersion: ">=v1.23.0-0"
 version: 1.1.2
-appVersion: "1.0.3"
+appVersion: "1.0.3b"
